Dark mode code block fixes #11

--- a/quantecon_book_theme/scss/_syntax.scss
+++ b/quantecon_book_theme/scss/_syntax.scss
@@ -1,9 +1,9 @@
 
 /* Syntax highlighting */
 .highlight {
-    padding: 0 10px;
+    margin:0;
+    padding: 0.5rem 10px;
     border: 1px solid #e1e1e1;
-    margin: 0.5rem 0;
     background: #f7f7f7;
     border-radius: 2px;
   }
